--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,166 +1,679 @@
-* {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
-}
+* {box-sizing:border-box}
 
 #container{
 	max-width: 1500px;
 	margin: auto;
 }
 
+html{
+	scroll-behavior: smooth;
+}
+
+body, p, h1, h2, h3, h4, strong, figcaption, li{
+	color: black;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font-family: "Playfair Display";
+	letter-spacing: 5px;
+}
+
 header {
-	background-color: black;
+	background-color: gray;
 	text-align: center;
 	font-size: 35px;
-	color: white;
+	color: #ffffff;
 }
 
 body{
-	background-image: url(../img/background.jpg);
-	background-repeat: no-repeat;
-	background-size: 100%;
-}
-nav{
-	-webkit-flex: 1;
-	-ms-flex: 1;
-	flex: 1;
+	background-color: #ede4ec;
+	font-family: "Times New Roman", Georgia, Serif;
+	margin-left: 0px;
+	margin-right: 0px;
 }
 
-nav img{
-	width: 140px;
-	height: 120px;
-}
-
-nav ul {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
+section {
+	width: 100%;
+	height: 650px;
+	padding: 30px;
 	overflow: hidden;
-	background-color: #333;
 }
 
-nav ul li {
+input {
+	margin: 2px;
+}
+
+
+#slider {
+	height: 950px;
+}
+
+.bold {
+	font-weight: bold;
+}
+
+.justify {
+	text-align: justify;
+}
+
+/* The navigation bar */
+.topnav {
+	overflow: hidden;
+	background-color: #4c383a;
+	position: fixed; /* Set the navbar to fixed position */
+	top: 0; /* Position the navbar at the top of the page */
+	width: 100%; /* Full width */
+	z-index: 10;
+}
+
+.topnav ul {
+	list-style: none;
+	padding-left: 0;
+	margin: 0;
+}
+
+.topnav ul li {
+	float: left;
+}
+
+/* Links inside the navbar */
+.topnav a {
 	display: inline-block;
-	border-style: solid;
-	border-width: 5px;
-	padding: 0px 0px;
-}
-
-nav ul li a{
-	display: block;
-	color: white;
+	color: #c9af82;
 	text-align: center;
 	padding: 14px 16px;
 	text-decoration: none;
 }
 
-nav ul li a:hover{
-	background-color: #362327; 
+/* Change background on mouse-over */
+.topnav a:hover {
+	background: #ddd;
+	color: #000000;
+}
+
+.topnav a.active {
+	background-color: #ddd;
 	color: white;
 }
 
-.slider {
-	display: block;
-	height: 293px;
-	width: 600px;
-	margin: auto;
-	margin-top: 20px;
-	position: relative;
+.centralizar_texto {
+	text-align: center;
 }
 
-.slider li {
-	list-style: none;
-	position: absolute;
-}
-
-.slider img {
-	margin: auto;
-	height: 100%;
-	width: 100%;
-	vertical-align: top;
-}
-.slider input {
+.mySlides {
 	display: none;
 }
 
-.slider label {
-	background-color: #000;
-	bottom: 10px;
+.imagem_slider{
+	width: 100%;
+	border-radius: 10px;
+}
+
+.slideshow-container {
+	width: 80%;
+	margin: auto;
+	position: relative;
+}
+/* Next & previous buttons */
+.prev, .next {
 	cursor: pointer;
-	display: block;
-	height: 10px;
 	position: absolute;
-	width: 10px;
-	z-index: 10;
+	top: 50%;
+	width: auto;
+	padding: 16px;
+	margin-top: -22px;
+	color: #ffffff;
+	font-weight: bold;
+	font-size: 18px;
+	transition: 0.6s ease;
+	border-radius: 0 3px 3px 0;
+}
+/* Position the "next button" to the right */
+.next {
+	right: 0;
+	border-radius: 3px 0 0 3px;
+}
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+	background-color: rgba(0,0,0,0.8);
+}
+/* Caption text */
+.text {
+	color: #f2f2f2;
+	font-size: 15px;
+	padding: 8px 12px;
+	position: absolute;
+	bottom: 8px;
+	width: 100%;
+	text-align: center;
 }
 
-.slider li:nth-child(1) label {
-	left: 10px;
+/* The dots/bullets/indicators */
+.dot {
+	cursor: pointer;
+	height: 13px;
+	width: 13px;
+	margin: 0 2px;
+	background-color: #bbb;
+	border-radius: 50%;
+	display: inline-block;
+	transition: background-color 0.6s ease;
+}
+.active, .dot:hover {
+	background-color: #717171;
+}
+/* Fading animation */
+.fade {
+	-webkit-animation-name: fade;
+	-webkit-animation-duration: 2s;
+	animation-name: fade;
+	animation-duration: 2s;
+}
+@-webkit-keyframes fade {
+	from {opacity: .4} 
+	to {opacity: 1}
 }
 
-.slider li:nth-child(2) label {
-	left: 40px;
+@keyframes fade {
+	from {opacity: .4} 
+	to {opacity: 1}
 }
 
-.slider li:nth-child(3) label {
-	left: 70px;
+.image_round {
+	border-radius: 10px;
 }
 
-.slider img {
-	opacity: 0;
-	visibility: hidden;
+/* Animações dos icones da sessão serviços */
+
+.icone_rotacao {
+	transition: 1s ease;
 }
 
-.slider li input:checked ~ img {
-	opacity: 1;
-	visibility: visible;
-	z-index: 10;
+.icone_rotacao:hover {
+	transform: rotate(360deg);
 }
 
-/* Container for flexboxes */
-section {
-	display: -webkit-flex;
-	display: flex;
+.icone_shake {
+	transition: 1s ease;
 }
-article{
-	-webkit-flex: 3;
-	-ms-flex: 3;
-	flex: 3;
-	border-style: solid;
-	border-width: 5px;
+
+.icone_shake:hover {
+	animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+	transform: translate3d(0, 0, 0);
+	backface-visibility: hidden;
+	perspective: 1000px;
+}
+
+.icone_scale {
+	transition: 1s ease;
+}
+
+.icone_scale:hover {
+	transform: scale(1.5,1.5);
+}
+
+#quemsomos div{
+	height: 470px;
+	padding: 20px;
+}
+
+#quemsomos figure {
+	float: left;
+}
+
+#quemsomos figure img {
+	margin-left: 50px;
+}
+
+#quemsomos ul {
+	list-style-type: square;
+}
+
+/* SESSÂO SERVIÇOS */
+
+#servicos {
+	height: 340px;
+}
+
+#servicos article {
+	display: inline-block;
+	width: 33%;
+}
+
+#servicos article ion-icon {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+#servicos article p {
+	text-align: center;
+}
+
+/* SESSÂO CARDAPIOS */
+
+table {
+	background-color: #e6cce3;
+	width: 100%;
+}
+
+table, th, td {
+	border: 1px solid black;
+	border-collapse: collapse;
+}
+
+tr:hover {
+	background-color: #bfa8bd;
+}
+
+th {
+	background-color: #ab8ea8;
+}
+
+th, td {
+	padding: 15px;
+}
+
+#cardapio {
+	height: 890px;
+}
+
+#cardapio div {
+	float: left;
+	width: 33%;
+	padding: 10px;
+}
+
+#cardapio div ul li {
+	padding: 2px;
+}
+
+#cardapio div figure img {
+	width: 270px;
+	height: 150px;
+	border-radius: 20px;
+}
+
+#fotos_eventos {
+	height: 750px;
+}
+
+#fotos_eventos figure {
+	display: inline-block;
+	width: 27%;
+	padding-top: 20px;
+	padding-bottom: 20px;
+}
+
+#fotos_eventos figure figcaption {
+	font-weight: bold;
+	text-align: center;
+}
+
+#fotos_eventos figure img {
+	width: 100%;
+	height: 220px;
+	border-radius: 10px;
+}
+
+#tipos_eventos {
+	height: 800px;
+}
+
+#tipos_eventos div {
+	display: inline-table;
+	width: 49%;
+	padding: 20px;
+}
+
+#receitas {
+	height: 1440px;
+}
+
+#receitas article {
+	float: left;
+}
+
+#receitas figure {
+	float: left;
+}
+
+#receitas figure img {
+	width: 400px;
+	height: 300px;
+	border-radius: 20px;
+}
+
+#receitas div {
+	float: left;
+}
+
+/*Seção EVENTOS REALIZADOS*/
+
+/*Título da Seção*/
+#eventosrealizados {
+	color: #ffffff;
+	border: none;
+	text-align: center;
+}
+
+/*Formatação das Imagens da Primeira Linha*/
+.eventos{
+	float: left;
+	width: 33.3%;
+	padding: 5px;
+}
+
+.zoom {
+	transition: transform .2s;
+}
+.zoom:hover {
+	transform: scale(1.3);
+}
+
+/*SEÇÃO DEPOIMENTOS*/
+
+#depoimentos {
+	height: 1500px;
+}
+
+#depoimentos div {
+	display: inline-table;
+	width: 24%;
+	padding: 10px;
+}
+
+#depoimentos form {
+	width: 34%;
+}
+
+#depoimentos figure img {
+	width: 200px;
+	height: 200px;
+	border-radius: 10px;
+	margin-left: 20px;
+}
+
+#depoimentos figure figcaption {
+	padding-top: 10px;
+	text-align: center;
+	font-weight: bold;
+}
+
+input, textarea, select {
+	margin-top: 10px;
+	display: block;
+}
+
+input[type=radio] {
+	display: inline;
+}
+
+.label_mensagem {
+	margin-top: 10px;
+	display: block;
+}
+
+#formulario_depoimento input[type=button], #formulario_depoimento input[type=submit], #formulario_depoimento input[type=reset] {
+	background-color: #4c383a;
+	border: none;
+	color: #c9af82;
+	padding: 16px 32px;
+	text-decoration: none;
+	margin: 4px 2px;
+	cursor: pointer;
+	border-radius: 10px;
+}
+
+#formulario_depoimento input[type=button]:hover, #formulario_depoimento input[type=submit]:hover, #formulario_depoimento input[type=reset]:hover {
+	background-color: black;
+}
+
+/*Seção CONTATO*/
+
+#contato {
+	height: 580px;
+}
+
+#contato div {
+	float: left;
+	width: 50%;
+}
+
+#lista_icones ul {
+	padding-left: 0;
+}
+
+#lista_icones ul li {
+	display: inline-block;
+}
+
+#contato input[type=button], #contato input[type=submit], #contato input[type=reset] {
+	background-color: #4c383a;
+	border: none;
+	color: #c9af82;
+	padding: 16px 32px;
+	text-decoration: none;
+	margin: 4px 2px;
+	cursor: pointer;
+	border-radius: 10px;
+}
+
+#contato input[type=button]:hover, #contato input[type=submit]:hover, #contato input[type=reset]:hover {
+	background-color: black;
 }
 
 footer {
-	padding: 10px;
-	text-align: left;
-	color: white;
+	position: static;
+	bottom: 0;
+	width: 100%;
+	height: 2.5rem;   
 }
 
-footer div{
-	display: inline;
+footer p {
+	text-align: center;
 }
 
 ion-icon{
 	font-size: 42px;
+	color: black;
 }
 
 #iconeface {
 	color: #4267B2;
 }
-#iconeinstagram {
-	color: #c13584;
-}
-#iconetwitter {
-	color: #1da1f2;
-}
-#iconewhats {
-	color: #4ac959;
-}
 
-@media (max-width: 600px) {
-	section {
-		-webkit-flex-direction: column;
-		flex-direction: column;
+/*#iconeface:hover {
+	color: black;
+	}*/
+
+	#iconeinstagram {
+		color: #c13584;
 	}
-}
+
+/*#iconeinstagram:hover {
+	color: black;
+	}*/
+
+	#iconetwitter {
+		color: #1da1f2;
+	}
+
+/*#iconetwitter:hover {
+	color: black;
+	}*/
+
+	#iconewhats {
+		color: #4ac959;
+	}
+
+/*#iconewhats:hover {
+	color: black;
+	}*/
+
+	@keyframes shake {
+		10%, 90% {
+			transform: translate3d(0, -1px, 0);
+		}
+
+		20%, 80% {
+			transform: translate3d(0, 2px, 0);
+		}
+
+		30%, 50%, 70% {
+			transform: translate3d(0, -4px, 0);
+		}
+
+		40%, 60% {
+			transform: translate3d(0, 4px, 0);
+		}
+	}
+
+	@media (max-width: 500px) {
+
+	/*.navbar a {
+		float: none;
+	}
+
+	.navbar input {
+		margin-left: 150px;
+		margin-bottom: 20px;
+		}*/
+
+	/*.topnav a:not(:first-child) {
+		display: none;
+	}
+	.topnav a.icon {
+		float: right;
+		display: block;
+	}
+
+	.topnav.responsive {
+		position: relative;
+	}
+	.topnav.responsive .icon {
+		position: absolute;
+		right: 0;
+		top: 0;
+	}
+	.topnav.responsive a {
+		float: none;
+		display: block;
+		text-align: left;
+		}*/
+
+		section {
+			padding-top: 60px;
+		}
+
+		#slider {
+			margin-top: 80px;
+			height: 400px;
+		}
+
+		.imagem_slider{
+			width: 100%;
+			border-radius: 10px;
+		}
+
+		.slideshow-container {
+			width: 100%;
+
+			position: relative;
+		}
+
+		#quemsomos {
+			height: 1380px;
+		}
+
+		#cardapio {
+			height: 2100px;
+		}
+
+		#cardapio div {
+			float: none;
+			display: inline;
+		}
+
+		#servicos {
+			height: 700px;
+		}
+
+		#servicos article {
+			display: inline;
+		}
+
+		#fotos_eventos {
+			height: 2020px;
+		}
+
+		#fotos_eventos figure {
+			width: 80%;
+		}
+
+		#tipos_eventos {
+			height: 1500px;
+		}
+
+		#tipos_eventos div {
+			float: none;
+			width: 100%;
+		}
+
+		.zoom:hover {
+			transform: scale(1.3);
+		}
+
+		#depoimentos {
+			height: 3200px;
+		}
+
+		#depoimentos div figure img {
+			margin-left: 50px;
+		}
+
+		#receitas {
+			height: 2200px;
+		}
+
+		#receitas figure img {
+			width: 100%;
+			height: 200px;
+			border-radius: 10px;
+		}
+
+		#contato {
+			height: 850px;
+		}
+
+		#contato div {
+			float: none;
+			width: 100%;
+		}
+
+		#depoimentos form {
+			width: 100%;
+		}
+
+		#depoimentos div {
+			display: inline;
+		}
+
+		#depoimentos form fieldset {
+			width: 100%;
+		}
+
+		textarea {
+			width: 100%;
+			height: 150px;
+		}
+
+		#quemsomos, #cardapio, #servicos, #eventos, #receitas, #contato, #depoimentos{ 
+			clear: left; 
+			width: 100%;
+		}
+		#container { 
+			width: 100%;
+		}
+
+	}
